# LS-DEM_Parallel_Benchmark

./: Grain3d.h  Makefile  Parameters_LSDEM.txt  Parameters_LSDEM.txt2  README.md  job-LSDEM  job-single  mpi_border_communication.h  mpi_dynamic_binning.h  mpi_grains.h  mpi_helper_function.h  mpi_solver.h  slurm-11405566.out  slurm-11405602.out  use_12_processor  use_18_processor  use_1_processor  use_216_processor  use_27_processor  use_4_processor  use_64_processor  use_8_processor  utilities.h
LSDEM_Impulse_benchmark/: 1_proc  216_proc  27_proc  64_proc  8_proc  Levelset3d.hpp  Main  MainTest.cpp  Makefile  Parameters_LSDEM.txt  WallPlane.hpp  command_line_option.hpp  job-DEM  mpi_border_communication.hpp  mpi_collision_resolution.hpp  mpi_collision_resolution0.hpp  mpi_delaunay_triangulation.hpp  mpi_gather_for_save.hpp  mpi_init_simulation.hpp  mpi_quick_hull.hpp  mpi_solver_rigid.hpp  readParameters.hpp  utilities.hpp
LSDEM_Impulse_parallel/: Grain3d.hpp  Main  MainTest.cpp  Parameters_LSDEM.txt  definitions.hpp  delaunator.hpp  job-DEM  mpi_contact_normal.hpp  mpi_dynamic_binning.hpp  mpi_helper_function.hpp  mpi_init_simulation.hpp  mpi_move_grain.hpp  mpi_solver_rigid.hpp  mpi_triangulation_pressure.hpp  slurm-11548668.out  slurm-11548670.out  slurm-11548672.out  slurm-11548673.out  slurm-11549116.out  slurm-11551786.out  slurm-11554078.out  slurm-11554080.out  slurm-11554141.out  target
LSDEM_Impulse_serial/: Grain3d.hpp  Main  MainTest.cpp  Parameters_LSDEM.txt  WallBalls.hpp  WallPlane.hpp  WallTopography.hpp  collision_resolution.hpp  definitions.hpp  gather_for_save.hpp  init_simulation.hpp  job-single  no_nets.out  note  readParameters.hpp  solver.hpp  utilities.hpp
LSDEM_Membrane/: Grain3d.h  Main  MainTest.cpp  Parameters_LSDEM.txt  Parameters_LSDEM.txt2  Parameters_LSDEM.txt3  WallBalls.h  WallCap.h  WallCylinder.h  WallPlane.h  job-debug  job-triaxial  mpi_border_communication.h  mpi_dynamic_binning.h  mpi_gather_for_save.h  mpi_helper_function.h  mpi_init_simulation.h  mpi_solver.h  note  readParameters.h  utilities.h
LSDEM_Parallel/: Grain3d.h  Main  MainTest.cpp  Parameters_LSDEM.txt  Parameters_LSDEM.txt1  Parameters_LSDEM.txt2  Parameters_LSDEM.txt3  Parameters_LSDEM.txt4  WallBalls.h  WallCap.h  WallPlane.h  definitions.h  job-debug  job-triaxial  mpi_ballWalls_contact.h  mpi_dynamic_binning.h  mpi_gather_for_save.h  mpi_init_simulation.h  mpi_particle_migration.h  mpi_solver.h  note  readParameters.h  readme.txt  utilities.h
LSDEM_Parallel_ball/: Grain3d.h  WallCap.h  job-debug  (+3 more)
vtk/: CMakeLists.txt  CylindricalSample.cpp  VisualizeAllForceChain.cpp  VisualizeBallOneStation.cpp  VisualizeBallRank.cpp  VisualizeCollision.cpp  VisualizeFabric.cpp  VisualizeFakeBalls.cpp  VisualizeForceChain.cpp  VisualizeImpulseDuplicate.cpp  VisualizeImpulseOneStation.cpp  VisualizeMembraneContact.cpp  VisualizePenetration.cpp  VisualizePluviationOneStation.cpp  VisualizeRandomMove.cpp  VisualizeSingleGrain.cpp  VisualizeTopography.cpp  VisualizeTopographyFabric.cpp  VisualizeTopographyOneStation.cpp  VisualizeTriaxial.cpp  VisualizeTriaxialOneStation.cpp  VisualizeTriaxialOneStation0.cpp  VisualizeTriaxialRotation.cpp  buildMethods.h  definitions.h  helperMethods.h  readInputMethods.h  testRotate.cpp
(+100 files in other folders)
