cmake_minimum_required(VERSION 3.7.2)

PROJECT(Visualization)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
link_libraries(${VTK_LIBRARIES})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

#INCLUDE_DIRECTORIES(/usr/include/eigen3)
include_directories(/usr/include/eigen3)
include_directories(/usr/include/openmpi)

add_executable(VisualizeTriaxial VisualizeTriaxial.cpp)
add_executable(VisualizeTriaxialOneStation VisualizeTriaxialOneStation.cpp)
add_executable(VisualizeTriaxialOneStation0 VisualizeTriaxialOneStation0.cpp)
add_executable(VisualizeSingleGrain VisualizeSingleGrain.cpp)
add_executable(VisualizeFabric VisualizeFabric.cpp)
add_executable(VisualizeForceChain VisualizeForceChain.cpp)
add_executable(VisualizeTriaxialRotation VisualizeTriaxialRotation.cpp)
add_executable(VisualizeAllForceChain VisualizeAllForceChain.cpp)
add_executable(VisualizeMembraneContact VisualizeMembraneContact.cpp)
add_executable(VisualizeFakeBalls VisualizeFakeBalls.cpp)
add_executable(CylindricalSample CylindricalSample.cpp)
add_executable(VisualizeRandomMove VisualizeRandomMove.cpp)
add_executable(VisualizeCollision VisualizeCollision.cpp)
add_executable(VisualizePenetration VisualizePenetration.cpp)
add_executable(VisualizeImpulseDuplicate VisualizeImpulseDuplicate.cpp)
add_executable(VisualizeImpulseOneStation VisualizeImpulseOneStation.cpp)
add_executable(VisualizeBallOneStation VisualizeBallOneStation.cpp)
add_executable(VisualizeBallRank VisualizeBallRank.cpp)
add_executable(VisualizePluviationOneStation VisualizePluviationOneStation.cpp)
add_executable(VisualizeTopographyFabric VisualizeTopographyFabric.cpp)
add_executable(VisualizeTopographyOneStation VisualizeTopographyOneStation.cpp)
add_executable(VisualizeTopography VisualizeTopography)

target_link_libraries(VisualizeTriaxial ${VTK_LIBRARIES})
target_link_libraries(VisualizeTriaxialOneStation ${VTK_LIBRARIES})
target_link_libraries(VisualizeTriaxialOneStation0 ${VTK_LIBRARIES})
target_link_libraries(VisualizeSingleGrain ${VTK_LIBRARIES})
target_link_libraries(VisualizeFabric ${VTK_LIBRARIES})
target_link_libraries(VisualizeForceChain ${VTK_LIBRARIES})
target_link_libraries(VisualizeTriaxialRotation ${VTK_LIBRARIES})
target_link_libraries(VisualizeAllForceChain ${VTK_LIBRARIES})
target_link_libraries(VisualizeMembraneContact ${VTK_LIBRARIES})
target_link_libraries(VisualizeFakeBalls ${VTK_LIBRARIES})
target_link_libraries(CylindricalSample ${VTK_LIBRARIES})
target_link_libraries(VisualizeRandomMove ${VTK_LIBRARIES})
target_link_libraries(VisualizeCollision ${VTK_LIBRARIES})
target_link_libraries(VisualizePenetration ${VTK_LIBRARIES})
target_link_libraries(VisualizeImpulseDuplicate ${VTK_LIBRARIES})
target_link_libraries(VisualizeImpulseOneStation ${VTK_LIBRARIES})
target_link_libraries(VisualizeBallOneStation ${VTK_LIBRARIES})
target_link_libraries(VisualizeBallRank ${VTK_LIBRARIES})
target_link_libraries(VisualizePluviationOneStation ${VTK_LIBRARIES})
target_link_libraries(VisualizeTopographyFabric ${VTK_LIBRARIES})
target_link_libraries(VisualizeTopographyOneStation ${VTK_LIBRARIES})
target_link_libraries(VisualizeTopography ${VTK_LIBRARIES})
